--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
-  margin: 0px;
+  margin: 0px 0px 0px 0px;
 }
 
 /* organization of the global webpage */
 #webpage {
-  margin: 16px;
-  width: 95%;
+  margin: 32px auto 32px auto;
+  width: 70%;
   display: grid;
   grid-template-areas:
     "head head"
@@ -27,4 +27,32 @@
 
 #webpage > footer {
   grid-area: foot;
+}
+
+/* organize the header section */
+
+header {
+  display: grid;
+  grid-template-areas: "logo nav";
+  margin: 0px 0px 16px 0px;
+}
+
+.logo-container {
+  grid-area: logo;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.logo {
+  border: 2px rgb(100, 100, 197) solid;
+  border-radius: 50% 50% 50% 50%;
+}
+
+/* main organization */
+
+main {
 }
