--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   margin: 0px 0px 0px 0px;
+  font-family: "Roboto", sans-serif;
 }
 
 /* organization of the global webpage */
@@ -15,7 +16,7 @@
 
 #webpage > header {
   grid-area: head;
-  padding: 10px 30px 0px 30px;
+  padding: 10px 80px 0px 80px;
 }
 
 #webpage > nav {
@@ -56,7 +57,12 @@ nav {
 }
 
 nav > a {
-  color: white;
+  padding-right: 8px;
+}
+
+.header-link {
+  font-size: 18px;
+  color: #e5e7eb;
 }
 
 .logo {
@@ -70,17 +76,24 @@ nav > a {
   display: grid;
   grid-template-areas: "a b b b";
   margin: 0px 0px 0px 0px;
-  padding: 10px 30px 10px 30px;
+  padding: 10px 80px 10px 80px;
 }
 
 .class {
   grid-area: a;
 }
 
+h1 {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: 900;
+}
+
 .placeholder {
   grid-area: b;
   margin: 10px 10px 0px 10px;
-  height: 150px;
+  height: 250px;
+  width: 100%;
 }
 
 .placeholder-img {
@@ -94,21 +107,21 @@ nav > a {
 .random-info {
   background-color: white;
   height: 200px;
-  padding: 10px 30px 10px 30px;
+  padding: 10px 80px 10px 80px;
 }
 
 /* section quotes */
 
 .quote {
-  padding: 10px 30px 10px 30px;
+  padding: 10px 80px 10px 80px;
 }
 
 /* section form */
 .form {
-  padding: 10px 30px 10px 30px;
+  padding: 10px 80px 10px 80px;
 }
 
 /* container-contact section */
 .container-contact {
-  padding: 10px 30px 10px 30px;
+  padding: 10px 80px 10px 80px;
 }
