add social media linked-logo, user can click on logo to access on my different social medias account

--- a/style.css
+++ b/style.css
@@ -173,7 +173,11 @@ h1 {
   padding: 10px 80px 10px 80px;
 }
 
+/* footer webpage's part */
 /* container-contact section */
 .container-contact {
   padding: 10px 80px 10px 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
