--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   grid-area: head;
   padding: 10px 80px 0px 80px;
   margin: 0px auto 0px auto;
-  width: 70%;
+  width: 55%;
 }
 
 #webpage > nav {
@@ -29,13 +29,13 @@
 #webpage > main {
   grid-area: main;
   margin: 0px auto 0px auto;
-  width: 70%;
+  width: 55%;
 }
 
 #webpage > footer {
   grid-area: foot;
   margin: 0px auto 16px auto;
-  width: 70%;
+  width: 55%;
 }
 
 header,
@@ -72,6 +72,10 @@ nav > a {
   color: #e5e7eb;
 }
 
+nav > a:hover {
+  color: orange;
+}
+
 .logo {
   border: 2px rgb(100, 100, 197) solid;
   border-radius: 50% 50% 50% 50%;
@@ -82,7 +86,7 @@ nav > a {
 .intro-placeholder-container {
   display: grid;
   grid-template-areas: "a b b b";
-  margin: 0px 0px 0px 0px;
+  margin: 0px 0px 8px 0px;
 }
 
 .class {
@@ -98,12 +102,13 @@ h1 {
 .placeholder {
   grid-area: b;
   margin: 10px 10px 0px 10px;
-  height: 250px;
   width: 100%;
+  height: 100%;
 }
 
 .placeholder-img {
   width: 100%;
+  height: 180px;
   border: 2px rgb(100, 100, 197) solid;
   border-radius: 5% 5% 5% 5%;
 }
@@ -125,14 +130,13 @@ h1 {
   width: 100px;
   border: #3882f6 solid 3px;
   border-radius: 15%;
+  margin: 0px auto 0px auto;
 }
 
 .img-text-container {
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-content: center;
   width: 30%;
 }
 
@@ -140,6 +144,7 @@ h1 {
   background-color: whitesmoke;
   color: #1f2937;
   font-size: 12px;
+  margin: 0px auto 0px auto;
   padding-top: 8px;
 }
 /* section quotes */
@@ -181,6 +186,11 @@ form {
     "rq rq";
 }
 
+.fname,
+.lname > label {
+  margin-right: 8px;
+}
+
 .fname {
   grid-area: fn;
   background-color: whitesmoke;
@@ -210,7 +220,7 @@ form {
 
 .request > label {
   position: relative;
-  bottom: 40px;
+  bottom: 90px;
 }
 .request > textarea {
   height: 100px;
@@ -224,6 +234,10 @@ label,
 input {
   background-color: whitesmoke;
   color: #1f2937;
+}
+
+input[type="submit"] {
+  width: 30%;
 }
 
 /* footer webpage's part */
